# autofeature

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
autofeature/: __init__.py  detector.py  encoders.py  engineer.py  pipeline.py  selector.py
tests/: test_autofeature.py
workflows/: ci.yml
